# isaacsim-agent

./: .gitattributes  .gitignore  AGENTS.md  AUTO_REVIEW.md  CLAUDE.md  README.md  STATUS.md  plan.md  pyproject.toml
configs/: README.md
docs/: README.md  contracts.md  ral_writing_playbook.md  render_grscenes_smoke.md  render_phase1_cli.md  setup.md
paper/: README.md
results/: README.md  schema.md
scripts/: README.md  isaac_python.sh  package_block_a_paper.py  package_block_a_ral_assets.py  render_demo_views.py  render_usd_asset.py  render_usd_batch.py  run_agent_v0.py  run_agent_v0_task_config.py  run_grscenes_render_smoke.py  run_nav_baseline.py  run_pickplace_baseline.py  run_suite.py  smoke_test_env.py  smoke_test_isaac.py  summarize_block_a_cross_family.py  summarize_block_a_final_closure.py  summarize_block_a_master.py  summarize_results.py  validate_contracts.py
skills/: README.md
tests/: isaac_stage_test_utils.py  test_agent_runtime_smoke.py  test_block_a_cross_family_summary.py  test_block_a_expanded_smoke.py  test_block_a_final_closure_summary.py  test_block_a_manipulation_harder_smoke.py  test_block_a_manipulation_pilot_smoke.py  test_block_a_master_summary.py  test_block_a_paper_packaging.py  test_block_a_pilot_smoke.py  test_block_a_prompt_only_ablation_smoke.py  test_block_a_robustness_smoke.py  test_block_a_runtime_only_ablation_smoke.py  test_contracts.py  test_eval_harness_smoke.py  test_external_usd_lighting.py  test_nav_smoke.py  test_nav_stage_population.py  test_pickplace_smoke.py  test_pickplace_stage_population.py  test_scaffold_smoke.py  (+5 more)
(+131 files in other folders)
