[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "isaacsim-agent"
version = "0.1.0"
description = "Milestone-driven embodied-agent study scaffold for NVIDIA Isaac Sim."
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = []

[dependency-groups]
dev = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
package = true
